--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-# DaemKhan.github.io
-Personal Portfolio 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+   <title>Jason Downing</title>
