--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   -->
 
   <!-- Custom Title Bar -->
-  <title>Jason Downing</title>
+  <title>Daem Khan</title>
 
   <!-- Bootstrap Core CSS -->
   <!-- 6/15/2018: Updated to the latest version of Bootstrap (4.1.1) -->
@@ -107,16 +107,12 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>Jason Downing</strong>
+            <strong>Daem Khan</strong>
           </h1>
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">Mountain Biker. Skier. UMass Lowell Grad.</p>
-          <p class="text-italic mb-5">
-            Software Engineer</a>
-          </p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
+          <p class="text-faded mb-5">I am senior at George Mason University who is interested in anything from computer architecture to developing front and backend language.</p
         </div>
       </div>
     </div>
