--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!--
-    File: index.html
-    Jason Downing
-    Contact: jason@downing.io
-    MIT Licensed - see http://opensource.org/licenses/MIT for details.
-    Anyone may freely use this code. Just don't sue me if it breaks stuff.
-    Created: September 3rd, 2015.
-    Last Updated: March 28th, 2019
-    Jason Downing's personal website. This site has information about him,
-    details about his education, skills, and links to his GitHub and LinkedIn
-    Profiles. This site is hosted on GitHub Pages.
-  -->
+ 
 
   <!-- Custom Title Bar -->
   <title>Daem Khan</title>
@@ -61,7 +50,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Jason Downing</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Daem Khn</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -79,10 +68,10 @@
             <a class="nav-link js-scroll-trigger" href="#about">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#work">Work</a>
+            <a class="nav-link js-scroll-trigger" href="#work">Work Experience</a>
           </li>
 					<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#funstuff">Fun</a>
+            <a class="nav-link js-scroll-trigger" href="#funstuff">Code Just for Fun</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#github">GitHub</a>
@@ -131,50 +120,49 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
-          <p class="text-faded">Bachelor of Science in Computer Science from
-          <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">UMass Lowell</a></p>
+          <p class="text-faded">Bachelor degreee in Information Systems Operations Management
+          <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">George Mason University</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Graduated in May 2017 with Latin Honors</p>
+          <p class="text-faded">Graduating in 2020</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">C#, JavaScript, Java</p>
-          <p class="text-faded">Python, and C / C++</p>
+          <p class="text-faded no-margin">JavaScript, Java</p>
+          <p class="text-faded">Python, and HTML</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-          <p class="text-faded no-margin">C# .NET Back end</p>
           <p class="text-faded">HTML5 Front end</p>
         </div>
       </div>
 
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#work">Wait There's More!</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#work">Additional Information</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- Work Experience Section. -->
-  <section id="work">
+  <section id="Work Experience">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">Work</h2>
+          <h2 class="section-heading">Work Experience</h2>
           <hr class="primary">
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">System Engineer</h3>
+          <h3 class="mt-4 mb-4">Gap Sales Associate</h3>
           <p class="text-muted">Apr 2018 to Present: System Engineer at BAE</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
