--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Gap Sales Associate</h3>
-          <p class="text-muted">Apr 2018 to Present: System Engineer at BAE</p>
+          <p class="text-muted">April 2016 - Semtember </p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-truck text-primary sr-icons"></i>
