--- a/index.html
+++ b/index.html
@@ -163,30 +163,29 @@
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">Gap Sales Associate</h3>
-          <p class="text-muted">April 2016 - Semtember </p>
+	  <h3 class="mt-4 mb-4">April 2016 - Semtember 2016</h3>
+          <p class="text-muted">Handled cash and helped with daily operations.</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-truck text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">Software Developer</h3>
-          <p class="text-muted">Jul 2017 to Apr 2018: C# Web API
-            development for Creative Logistics Solutions (CLS)</p>
+          <h3 class="mt-4 mb-4">Wgmu Radio Host</h3>
+	  <h3 class="mt-4 mb-4">August 2019 - Present</h3>
+          <p class="text-muted">WGMU talk/radio show host.</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <!-- TIL: Bootstrap has awesome spacing classes
                     https://getbootstrap.com/docs/4.0/utilities/spacing/ -->
           <i class="fa fa-4x fa-android text-primary sr-icons"></i>
           <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
-          <h3 class="mt-4 mb-4">Technical Intern</h3>
-          <p class="text-muted mb-4">Summer 2015: COBOL projects for
-            Fidelity Institutional (FI)</p>
-          <p class="text-muted mb-5">Summer 2016: Android features & improvements
-            for Fidelity Personal Investing (PI) </p>
-        </div>
+          <h3 class="mt-4 mb-4">GMU Parking</h3>
+	  <h3 class="mt-4 mb-4">August 2019 - May 2020</h3>
+          <p class="text-muted mb-4">Worked daily parking operations, dealt with pedestrian traffic and scooter traffic.</p>
+        </div>>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-pied-piper text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">Research Assistant</h3>
-          <p class="text-muted">Summer 2014: C++ & JavaScript API work for 
-            UMass Lowell's Engaging Computing Group Research Lab</p>
+          <h3 class="mt-4 mb-4">Sentara Hospital Volunteer</h3>
+	  <h3 class="mt-4 mb-4">January 2014 - May 2016</h3>
+          <p class="text-muted">Worked in the ER, helped with daily operations and took care of patients.</p>
         </div>
       </div>
       <div class="text-center">
@@ -202,7 +201,7 @@
       <div class="row images-vcenter">
 			
 				<div class="col-lg-12 pb-3 text-center">
-          <h2 class="section-heading">Fun Stuff</h2>
+          <h2 class="section-heading">Code Just For Fun</h2>
           <hr class="hr-black">
         </div>
 			
@@ -213,7 +212,7 @@
 								 class="img-fluid images-border"
 								 alt="Mountain Biking">
 					</a>
-          <h3 class="mt-4 mb-4">Mountain Biking</h3>
+          <h3 class="mt-4 mb-4">Mountai</h3>
         </div>
 			
 				<div class="col-lg-4 col-sm-6 text-center">
@@ -252,7 +251,7 @@
           page, without adding the silly extra "CLICK THIS ICON" text that was
           there before. -->
           <h2 class="section-heading">
-            <a class="text-white-link" href="https://github.com/JasonD94" class="text-white">GitHub: JasonD94
+            <a class="text-white-link" href="https://github.com/JasonD94" class="text-white">GitHub: DaemKhan
               <i class="fa fa-1x fa-github-square" style="color:white"></i>
             </a>
           </h2>
@@ -414,10 +413,9 @@
           <h2 class="section-heading">
           
           <!-- Attempting to avoid spam by removing @ and the dot in my domain -->
-            Contact Jason</h2>
+            Contact Daem</h2>
           <hr class="primary">
-          <p>If you have an interesting opportunity in the <strong>New Hampshire area</strong>, you
-            can send him a message using the form below.</p>
+          <p>If you have an interesting opportunity in the <strong>DMW Area</strong>, please send a message using the form below.</p>
           
           <!-- Really avoiding spam by sending emails to the spam box
                Docs URL: https://formspree.io/ 
@@ -438,7 +436,7 @@
             <input type="hidden" name="_next" value="thanks.html" />
             <!-- Submit button -->
             <div class="form-group">
-              <input type="submit" value="Email Jason" class="btn btn-primary btn-xl">
+              <input type="submit" value="Email Daem" class="btn btn-primary btn-xl">
             </div>
           </form>
         </div>
