--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <section id="Work Experience">
     <div class="container">
       <div class="row">
-      <div class="col-lg-3 col-sm-6 text-center">
+        <div class="col-lg-12 text-center">
           <h2 class="section-heading">Work Experience</h2>
           <hr class="primary">
         </div>
