--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
           <h3 class="mt-4 mb-4">GMU Parking</h3>
 	  <h3 class="mt-4 mb-4">August 2019 - May 2020</h3>
           <p class="text-muted mb-4">Worked daily parking operations, dealt with pedestrian traffic and scooter traffic.</p>
-        </div>>
+        </div>
+	<div class="col-lg-3 col-sm-6 text-center">
           <h3 class="mt-4 mb-4">Sentara Hospital Volunteer</h3>
 	  <h3 class="mt-4 mb-4">January 2014 - May 2016</h3>
           <p class="text-muted">Worked in the ER, helped with daily operations and took care of patients.</p>
@@ -188,19 +189,6 @@
       </div>
     </div>
   </section>
-  
-  <!-- Some fun stuff, leave the boring code for last. -->
-  <section class="bg-green" id="funstuff">
-    <div class="container-fluid">
-      <div class="row images-vcenter">
-			
-				<div class="col-lg-12 pb-3 text-center">
-          <h2 class="section-heading">Code Just For Fun</h2>
-          <hr class="hr-black">
-        </div>
-	      
-				
-	</section>
 
   <!-- GitHub Section -->
   <section class="min-padding-top bg-dark" id="github">
