--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         Header image found at the following URL:
         https://upload.wikimedia.org/wikipedia/commons/f/f5/Free-ride.jpg
    -->
-  <header class="masthead text-center text-white d-flex">
+  <header class="masthead text-center text-black d-flex">
     <div class="container my-auto">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -141,12 +141,6 @@
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
           <p class="text-faded">HTML5 Front end</p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#work">Additional Information</a>
         </div>
       </div>
     </div>
