--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
     <div class="container my-auto">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h1 class="text-uppercase">
-            <strong>Daem Khan</strong>
+          <h1 class="text-uppercase"
           </h1>
           <hr>
         </div>
