--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Daem Khan</a>
+      <a href="#page-top">Daem Khan</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -62,25 +62,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
+            <a  href="#page-top">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Education</a>
+            <a  href="#about">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#work">Work Experience</a>
+            <a  href="#work">Work Experience</a>
           </li>
 	  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#funstuff">Code Just for Fun</a>
+            <a href="#funstuff">Code Just for Fun</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#github">GitHub</a>
+            <a href="#github">GitHub</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/resume.pdf">Resume</a>
+            <a href="img/resume.pdf">Resume</a>
           </li>
         </ul>
       </div>
