--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav id="mainNav">
     <div class="container">
 
       <!-- Updated with latest Creative -->
