--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 	  <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#funstuff">Code Just for Fun</a>
           </li>
-          <li class="nav-link js-scroll-trigger" class="nav-item">
-            <a href="#github">GitHub</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#github">GitHub</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
