--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
-          <p class="text-faded">Bachelor's degree in Information Systems and Operations Management
+          <p class="text-faded">Bachelor's degree in Information Systems and Operations Management</p>
           <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">George Mason University</a></p>
         </div>
 
