--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
 	  <br>
-          <p class="text-faded mb-5">I am senior at George Mason University who is interested in anything from computer architecture to developing front and backend software.</p
+          <p class="text-faded mb-5">I am a senior at George Mason University who is interested in anything from computer architecture to developing front and backend software.</p
         </div>
       </div>
     </div>
@@ -238,7 +238,7 @@
 
         <!-- Third Link: source code for Java Project -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="">
+          <a class="portfolio-box" href="https://github.com/DaemKhan/NBADataBase">
            
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -246,7 +246,7 @@
                   Nba DataBase
                 </div>
                 <div class="project-name">
-                  An Nba Database created using Java. Shows in depth understanding of Java.
+                  An Nba Database created using Java. Shows basic understanding of Java.
                 </div>
               </div>
             </div>
