--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
   rel='stylesheet' type='text/css'>
 
-  <!-- Plugin CSS -->
-  <link href="css/magnific-popup.css" rel="stylesheet">
-
-  <!-- Theme CSS -->
-  <link href="css/creative.min.css" rel="stylesheet">
-
-  <!-- Index CSS -->
-  <link href="css/index.css" rel="stylesheet">
-
-  <!-- Custom favicon -->
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-
   <!-- Google Analytics Tracking Tag, helps keep track of how many people visit site.
         -->
   <script>
@@ -39,7 +27,7 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-68657454-1', 'auto');
+    ga('create', 'UA-XXXXX-Y', 'auto');
     ga('send', 'pageview');
   </script>
 
