--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="mainNav">
     <div class="container">
 
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Daem Khan</a>
