--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="headNav">
     <div class="container">
 
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Daem Khan</a>
@@ -60,7 +60,7 @@
       </button>
 
       <!-- all of the links that can be toggeled. -->
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse" id="navbarRespond">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
@@ -107,7 +107,7 @@
   </header>
 
   <!-- Education Section -->
-  <section class="bg-primary" id="about">
+  <section class="bg-primary" id="educate">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -120,7 +120,7 @@
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
           <p class="text-faded">Bachelor's degree in Information Systems and Operations Management</p>
-          <a class="text-white-link" href="https://www.uml.edu/" class="text-blue">George Mason University</a></p>
+          <a class="text-white-link" href="https://www2.gmu.edu/" class="text-black">George Mason University</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix">
