--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="headNav">
     <div class="container">
 
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Daem Khan</a>
+      <a>Daem Khan</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
