--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <i class="fa fa-4x fa-id-card-o text-faded sr-icons"></i>
           <h3 class="text-white">Degree</h3>
           <p class="text-faded">Bachelor's degree in Information Systems and Operations Management</p>
-          <a class="text-white-link" href="https://www2.gmu.edu/" class="text-black">George Mason University</a></p>
+          <a class="text-black-link" href="https://www2.gmu.edu/" class="text-black">George Mason University</a></p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix">
