--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
     ga('create', 'UA-XXXXX-Y', 'auto');
     ga('send', 'pageview');
   </script>
-
+	
+<style>
+	.text-black-link {color:black;}
+</style>
+	
 </head>
 
 <body id="page-top">
