--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/resume.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="DaemKhanResume.pdf">Resume</a>
           </li>
         </ul>
       </div>
@@ -286,7 +286,7 @@
             <div class="form-group">
               <textarea name="message" placeholder="Your message" class="form-control"></textarea>
             </div>
-            <!-- Hidden elements here -->
+            
             <input type="hidden" name="_subject" value="New email from Contact Me Form!" class="form-control">
             <input type="hidden" name="_next" value="thanks.html" />
             <!-- Submit button -->
