--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="C:/Users/Shahzeb/Desktop/DaemKhanUpdatedResume.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="Resources\DaemKhanUpdatedResume.pdf">Resume</a>
           </li>
         </ul>
       </div>
@@ -143,6 +143,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
+	  <p class="text-faded no-margin">Back end software</p>
           <p class="text-faded">HTML5 Front end</p>
         </div>
       </div>
