--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </button>
 
       <!-- all of the links that can be toggeled. -->
-      <div class="collapse navbar-collapse" id="navbarRespond">
+      <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#page-top">Home</a>
