--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger href="C:\Users\Shahzeb\Desktop\DaemKhanUpdatedResume.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="img/DaemKhanUpdatedResume.pdf">Resume</a>
           </li>
         </ul>
       </div>
