--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body id="page-top">
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="headNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top:0" id="mainNav">
     <div class="container">
 
       <a>Daem Khan</a>
