--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="img/DaemKhanUpdatedResume.pdf">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/11iCVfhFlhD1PxDzp-K-MI_D-728wbEh2/view?usp=sharing">Resume</a>
           </li>
         </ul>
       </div>
