--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <p>If you have an interesting opportunities in the DMV Area, please send a message using the form below.</p>
 		
           
-          <form action="https://formspree.io/dkhan@masonlive.gmu.edu" method="POST" class="form-horizontal" role="form">
+          <form action="https://formspree.io/mpzwvlng" method="POST" class="form-horizontal" role="form">
             <!-- requires a name, email, and a message. -->
             <div class="form-group">
               <input type="text" name="name" placeholder="Your Name" class="form-control">
