--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <h2 class="section-heading">
             Contact Daem</h2>
           <hr class="primary">
-          <p>If you have an interesting opportunities in the DMV Area, please send a message using the form below.</p>
+          <p> Any interesting opportunities, please send a message using the form below. </p>
 		
           
           <form action="https://formspree.io/mpzwvlng" method="POST" class="form-horizontal" role="form">
