--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <p class="text-muted">Handled cash and helped with daily operations.</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
-          <h3 class="mt-4 mb-4">Wgmu Radio Host</h3>
+          <h3 class="mt-4 mb-4">Wgmu Radio Host (spare time) </h3>
 	  <h3 class="mt-4 mb-4">August 2019 - Present</h3>
           <p class="text-muted">WGMU talk/radio show host.</p>
         </div>
