--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/13rpLWTKzKM_t43n_BAizHElFFhMTS5rC/view?usp=sharing">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="file:///C:/Users/daemk/Desktop/Wrk/DaemKhanResume.pdf">Resume</a>
           </li>
         </ul>
       </div>
