--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="col-lg-8 mx-auto">
 	  <br>
-          <p class="text-faded mb-5">I am a senior at George Mason University who is interested in anything from computer architecture to developing front and backend software.</p
+          <p class="text-faded mb-5">Main areas of interest include front-end web development, clouddevelopment, Project Management, and backend development. As amotivated new graduate, I am looking for entry level positions.</p
         </div>
       </div>
     </div>
