--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">JavaScript, Java</p>
+          <p class="text-faded no-margin">JavaScript, Java, Typescript</p>
           <p class="text-faded">Python, and HTML</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-	  <p class="text-faded no-margin">Back end software</p>
-          <p class="text-faded">HTML5 Front end</p>
+	  <p class="text-faded no-margin">WebFrameworks: Angular, React, Node.js</p>
+          <p class="text-faded">Cloud Platforms: Amazon Web Services(AWS), Microsoft Azure</p>
         </div>
       </div>
     </div>
@@ -159,20 +159,20 @@
           <hr class="primary">
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
-          <h3 class="mt-4 mb-4">Gap Sales Associate</h3>
-	  <h3 class="mt-4 mb-4">April 2016 - September 2016</h3>
-          <p class="text-muted">Handled cash and helped with daily operations.</p>
+          <h3 class="mt-4 mb-4">EIP Highschool Mentor</h3>
+	  <h3 class="mt-4 mb-4">September 2016 - March 2017</h3>
+          <p class="text-muted">Mentored Highschool students, Helped with HTML, Javascript, Java, Math, Science.</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <h3 class="mt-4 mb-4">Wgmu Radio Host (spare time) </h3>
-	  <h3 class="mt-4 mb-4">August 2019 - Present</h3>
+	  <h3 class="mt-4 mb-4">August 2019 - March 2020</h3>
           <p class="text-muted">WGMU talk/radio show host.</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <!-- bootstrap spacing class.
                      -->
           <h3 class="mt-4 mb-4">GMU Parking</h3>
-	  <h3 class="mt-4 mb-4">August 2019 - December 2019</h3>
+	  <h3 class="mt-4 mb-4">August 2019 - March 2020</h3>
           <p class="text-muted mb-4">Worked daily parking operations, dealt with pedestrian traffic and scooter traffic.</p>
         </div>
 	<div class="col-lg-3 col-sm-6 text-center">
